tests/ui/traits/alias/wf.stderr
error[E0277]: the trait bound `T: Foo` is not satisfied
  --> $DIR/wf.rs:5:14
   |
LL | trait B<T> = A<T>;
   |              ^^^^ the trait `Foo` is not implemented for `T`
   |
note: required by a bound in `A`
  --> $DIR/wf.rs:4:12
   |
LL | trait A<T: Foo> {}
   |            ^^^ required by this bound in `A`
help: consider restricting type parameter `T` with trait `Foo`
   |
LL | trait B<T: Foo> = A<T>;
   |          +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
